fix(ci): 修复管道导致失败检测失效的问题
- 为 test/lint/build 步骤添加 set -o pipefail
- 解决管道命令退出码被最后一个命令覆盖的问题
- 确保 make 命令失败时能正确触发 AI 诊断步骤

问题：管道 '|' 默认返回最后一个命令的退出码
修复：启用 pipefail 选项，返回管道中任一失败命令的退出码

影响：修复后测试/检查失败时会正确触发 if: failure() 条件

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,15 +30,21 @@ jobs:
 
       - name: Run tests
         id: test
-        run: make test 2>&1 | tee test.log
+        run: |
+          set -o pipefail
+          make test 2>&1 | tee test.log
 
       - name: Run lint
         id: lint
-        run: make lint 2>&1 | tee lint.log
+        run: |
+          set -o pipefail
+          make lint 2>&1 | tee lint.log
 
       - name: Run build
         id: build
-        run: make build 2>&1 | tee build.log
+        run: |
+          set -o pipefail
+          make build 2>&1 | tee build.log
 
       # 收集失败日志（仅在前面步骤失败时执行）
       - name: Collect failure logs
