fix(ci): 修正 ANTHROPIC_BASE_URL 引用类型
- 将 secrets.ANTHROPIC_BASE_URL 改为 vars.ANTHROPIC_BASE_URL
- BASE_URL 应作为 repository variable 而非 secret 引用

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,7 +94,7 @@ jobs:
         if: failure()
         env:
           ANTHROPIC_AUTH_TOKEN: ${{ secrets.ANTHROPIC_AUTH_TOKEN }}
-          ANTHROPIC_BASE_URL: ${{ secrets.ANTHROPIC_BASE_URL }}
+          ANTHROPIC_BASE_URL: ${{ vars.ANTHROPIC_BASE_URL }}
           API_TIMEOUT_MS: ${{ vars.API_TIMEOUT_MS }}
           CLAUDE_CODE_DISABLE_NONESSENTIAL_TRAFFIC: ${{ vars.CLAUDE_CODE_DISABLE_NONESSENTIAL_TRAFFIC }}
         run: |
